# homeassistant-fibaro-intercom

./: .gitignore  .pre-commit-config.yaml  CARD_README.md  DESCRIPTION.md  PROJECT.md  README.md  dev.py  hacs.json  hass-dev.py  pyproject.toml  requirements.txt  test_connection.py
.github/: WORKFLOWS.md
.github/workflows/: codeql.yml  hassfest.yml  quality.yml  tests.yml
custom_components/fibaro_intercom/: __init__.py  binary_sensor.py  camera.py  client.py  config_flow.py  const.py  coordinator.py  device_trigger.py  manifest.json  services.yaml  strings.json  switch.py
custom_components/fibaro_intercom/frontend/: README.md  demo.html  examples.md  fibaro-intercom-card.js
custom_components/fibaro_intercom/translations/: en.json
tests/: README.md  conftest.py  test_client.py  test_connection.py
tools/: commands.py
